--- a/OracleJETApplication/scss/oj-override.scss
+++ b/OracleJETApplication/scss/oj-override.scss
@@ -1505,7 +1505,7 @@ button#menuButton{
 }
 
 //Profile Styles
-#personaldetails{
+#personaldetails, #listview{
     padding:10px;
     img{
         width:100%;
