added a clear button for the people search

--- a/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
@@ -93,7 +93,7 @@
                        <!--temporary toggleSection function applied to these buttons, will need to submit form and return results and then clear results-->
                         <input id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Search', icons: { start: 'fa fa-search'} }" />
 
-                        <input id="reset" type="reset" data-bind="click: toggleSections,
+                        <input id="reset" type="reset" data-bind="click: resetData,
                                                       ojComponent: {component: 'ojButton', label: 'Clear'}" />
                     </div>
                 </form>
