Updated to create modal on click of employee, changed function to take user to employee profile page

--- a/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
@@ -112,7 +112,7 @@
                 </ul>
 
                 <script type="text/html" id="peoplelist_template">
-                    <li data-bind="attr: {id: $data['name']}, click: $parent.loadPersonPage">
+                    <li data-bind="attr: {id: $data['name']}, click: $parent.empBasicInfoOpen">
                         <div class="oj-row">
                             <div class="oj-lg-2 oj-md-2 oj-sm-12 oj-col" style="max-width:70px;padding-bottom:5px">
                                 <img data-bind="attr: {src: $parent.getPhoto($data['empId'])}"/>
