added paging to people template and updated sass

--- a/OracleJETApplication/scss/oj-override.scss
+++ b/OracleJETApplication/scss/oj-override.scss
@@ -1503,7 +1503,10 @@ button#menuButton{
         }
     }
 }
-
+//People Styles
+.resultWrapper{
+    clear:both;
+}
 //Profile Styles
 #personaldetails, #listview{
     padding:10px;
