--- a/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
@@ -100,14 +100,14 @@
             </div>
             <!-- End of Form -->
            <div class="resultWrapper">
+                <div data-bind="ojComponent: {component: 'ojPagingControl', data: listViewDataSource, pageSize:10}"></div>
                 <ul id="listview" data-bind="ojComponent: {component: 'ojListView',
                     data: listViewDataSource,
                     item: {template: 'peoplelist_template'},
                     selectionMode: 'single',
                     currentItem: '100',
                     selection: ['100'],
-                    rootAttributes: {style: 'width:100%;height:600px;overflow:auto; margin-top: 5px'},
-                    scrollPolicy: 'loadMoreOnScroll',
+                    rootAttributes: {style: 'width:100%;overflow:auto; margin-top: 5px'},
                     scrollPolicyOptions: {fetchSize: 10}}">
                 </ul>
 
