moved modal to linked tmpl instead of base people tmpl page

--- a/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
@@ -132,3 +132,5 @@
         </div>
     </div>
     <!-- End of Column -->
+
+    <div data-bind="template: {name: 'partials/employee-basic-info-modal/employee-basic-info-modal-large'}"></div>
