--- a/OracleJETApplication/templates/partials/employee-edit-modal/employee-edit-modal-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-edit-modal/employee-edit-modal-large.tmpl.html
@@ -3,40 +3,40 @@
         <div class="oj-row">
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">First Name</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: firstName}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.firstName}" />
             </div>
 
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Last Name</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: lastName}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.lastName}" />
             </div>
         </div>
         <div class="oj-row">
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">POS Check Name</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: posCheckName}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.posCheckName}" />
             </div>
 
              <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Language</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: language}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.language}" />
             </div>
         </div>
         <div class="oj-row">
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Time Zone</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: timeZone}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.timeZone}" />
             </div>
 
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Ethnicity</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: ethnicity}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.ethnicity}" />
             </div>
         </div>
         <div class="oj-row">
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Gender</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: gender}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.gender}" />
             </div>
         </div>
         <div class="oj-row">
@@ -45,51 +45,51 @@
         <div class="oj-row">
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Veteran Status</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: veteranStatus}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.veteranStatus}" />
             </div>
 
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Vietnam Era</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: vietnamEra}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.vietnamEra}" />
             </div>
         </div>
         <div class="oj-row">
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Other Eligible</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: otherEligible}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.otherEligible}" />
             </div>
 
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Other Protected</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: otherProtected}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.otherProtected}" />
             </div>
         </div>
         <div class="oj-row">
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Armed Forces Service Medal</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: armedForcesServiceMedal}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.armedForcesServiceMedal}" />
             </div>
 
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Recently Separated</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: recentlySeparated}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.recentlySeparated}" />
             </div>
         </div>
         <div class="oj-row">
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Special Disabled</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: specialDisabled}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.specialDisabled}" />
             </div>
 
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Registered Disabled Number</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: registeredDisabledNumber}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.registeredDisabledNumber}" />
             </div>
         </div>
         <div class="oj-row">
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Discharge Date</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: dischargeDate}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.dischargeDate}" />
             </div>
         </div>
         <div class="oj-row">
@@ -98,48 +98,48 @@
         <div class="oj-row">
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Email</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: email}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.email}" />
             </div>
 
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Phone</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: phone}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.phone}" />
             </div>
         </div>
         <div class="oj-row">
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Other Phone Number</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: mobile}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.mobile}" />
             </div>
 
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Fax Number</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: faxNumber}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.faxNumber}" />
             </div>
         </div>
         <div class="oj-row">
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Address</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: address1}" />
-                <input data-bind="ojComponent: {component: 'ojInputText', value: address2}" />
-                <input data-bind="ojComponent: {component: 'ojInputText', value: city}" />
-                <input data-bind="ojComponent: {component: 'ojInputText', value: state}" />
-                <input data-bind="ojComponent: {component: 'ojInputText', value: postal}" />
-                <input data-bind="ojComponent: {component: 'ojInputText', value: country}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.address1}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.address2}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.city}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.state}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.postal}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.country}" />
             </div>
 
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">Emergency Contact</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
-                <input data-bind="ojComponent: {component: 'ojInputText', value: emergencyName}" />
-                <input data-bind="ojComponent: {component: 'ojInputText', value: relationship}" />
-                <input data-bind="ojComponent: {component: 'ojInputText', value: emergencyAddress}" />
-                <input data-bind="ojComponent: {component: 'ojInputText', value: emergencyCity}" />
-                <input data-bind="ojComponent: {component: 'ojInputText', value: emergencyState}" />
-                <input data-bind="ojComponent: {component: 'ojInputText', value: emergencyZipCode}" />
-                <input data-bind="ojComponent: {component: 'ojInputText', value: emergencyPhone}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.emergencyName}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.relationship}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.emergencyAddress}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.emergencyCity}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.emergencyState}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.emergencyZipCode}" />
+                <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.emergencyPhone}" />
             </div>
         </div>
 
-        <button id="submitButton" data-bind="click:handleClose">Save</button>
+        <button id="submitButton" data-bind="click:$parent.handleClose">Save</button>
 
     </div>
