--- a/OracleJETApplication/templates/partials/employee-basic-info-modal/employee-basic-info-modal-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-basic-info-modal/employee-basic-info-modal-large.tmpl.html
@@ -1,4 +1,4 @@
-<div style="display:none;" id="empBasicDialog" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', rootAttributes: {class: 'empModal-dimensions'}}">
+<div style="display:none;" id="empBasicDialog" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', rootAttributes: {class: 'generalModal-dimensions'}}">
    <div class="oj-dialog-header oj-helper-clearfix" aria-labelledby="dialogTitleId">
         <span id="dialogTitleId" class="oj-dialog-title">
             <span data-bind="text: basicEmpInfo().firstName"></span>
@@ -8,7 +8,6 @@
      </div>
     <div class="oj-dialog-body">
         <div class="oj-row">
-           <!--img not working need to create new function for this image reference-->
             <img data-bind="attr: {src: getPhoto(basicEmpInfo().empId)}"/>
             <div data-bind="text: basicEmpInfo().phone"></div>
             <div data-bind="text: basicEmpInfo().title"></div>
