--- a/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
@@ -3,7 +3,7 @@
         <h2 id="currentPage" data-bind="text: label"></h2>
     </div>
     <div class="oj-col oj-sm-2 oj-lg-2 oj-lg-text-align-end">
-        <div data-bind="click: $parent.handleOpen" style="line-height:39px;">Edit</div>
+        <div data-bind="click: function(){$parent.handleOpen('#empDialog')}" style="line-height:39px;">Edit</div>
     </div>
 </div>
 <div class="oj-row">
