updated handleopen and closed and added all profile modals

--- a/OracleJETApplication/templates/partials/employee-external-payroll-modal/employee-external-payroll-modal-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-external-payroll-modal/employee-external-payroll-modal-large.tmpl.html
@@ -8,5 +8,6 @@
         <div class="oj-row">
 
         </div>
+        <button id="submitButton" class="basic-btn" data-bind="click: function(){handleClose('#externalPayrollDialog')}">Save</button>
     </div>
 </div>
