removed console and updated modal with data

--- a/OracleJETApplication/templates/partials/employee-hire-status-modal/employee-hire-status-modal-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-hire-status-modal/employee-hire-status-modal-large.tmpl.html
@@ -6,7 +6,7 @@
      </div>
     <div class="oj-dialog-body">
         <div class="oj-row">
-
+            <div data-bind="text: hireDate"></div>
         </div>
         <button id="submitButton" class="basic-btn" data-bind="click: function(){handleClose('#hireStatusDialog')}">Save</button>
     </div>
